@@ -1,3 +1,9 @@
+2018-02-07  Karl Berry  <karl@freefriends.org>
+
+	* tests/kpsewhich.test: don't run --no-casefold-search with
+	"Plain.TeX", since it succeeds on case-insensitive systems
+	and fails on case-sensitive ones.
+
 2018-02-04  Karl Berry  <karl@freefriends.org>
 
 	* texmf.cnf (texmf_casefold_search): new configuration value
